--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,15 @@
 {
   "version": "0.0.1",
   "host": "127.0.0.1",
-  "port": 7777
-
+  "port": 7777,
+  "db": {
+    "dev": {
+      "driver": "sqlite3",
+      "filename": "./store/sqlite.db"
+    },
+    "test": {
+      "driver": "sqlite3",
+      "filename": "./store/testSqlite.db"
+    }
+  }
 }
