--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "version": "0.0.1",
   "host": "127.0.0.1",
-  "port": 7777,
+  "port": 3000,
   "db": {
     "dev": {
       "driver": "sqlite3",
@@ -11,5 +11,11 @@
       "driver": "sqlite3",
       "filename": "./store/testSqlite.db"
     }
-  }
+  },
+  "cbr": {
+    "method": "GetCursOnDateXML",
+    "wsdl": "http://www.cbr.ru/DailyInfoWebServ/DailyInfo.asmx?wsdl"
+  },
+  "timeUpdateOrderState": 10000,
+  "VchCode": "RUB"
 }
