--- a/package.json
+++ b/package.json
@@ -18,18 +18,24 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
+    "cron": "^1.7.2",
+    "dateformat": "^3.0.3",
     "db-migrate": "^0.11.6",
     "db-migrate-shared": "^1.2.0",
     "db-migrate-sqlite3": "^0.4.0",
     "express": "^4.0.0",
+    "express-handlebars": "^3.1.0",
     "http-status-codes-js": "^1.0.1",
+    "install": "^0.13.0",
+    "lodash": "^4.17.15",
     "mocha": "^6.2.0",
+    "money-math": "^2.5.1",
     "nconf": "^0.10.0",
+    "npm": "^6.11.3",
     "nyc": "^14.1.1",
+    "soap-as-promised": "^1.26.0",
     "sqlite3": "^4.1.0",
-    "swagger-ui-express": "^4.0.7",
-    "swaggerize-express": "^4.0.5",
-    "swagmock": "~0.0.2",
+    "uuid": "^3.3.3",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -38,11 +44,11 @@
     "istanbul": "^0.4.5",
     "is-my-json-valid": "^2.13.1",
     "js-yaml": "^3.2.6",
-    "supertest": "^1.2.0",
-    "swagger-parser": "^3.4.1"
+    "supertest": "^1.2.0"
   },
   "scripts": {
-    "test": "mocha 'tests/**/*.js'"
+    "test": "mocha 'tests/*.js' --timeout 150000 --exit",
+    "coverage": "nyc --reporter html --reporter text npm run test"
   },
   "main": "./server"
 }
